fix hero alignment

--- a/css/index.scss
+++ b/css/index.scss
@@ -118,7 +118,6 @@ h1 {
   font-weight: normal;
   line-height: 1;
   word-spacing: 7px;
-  text-align: center;
 }
 
 .title {
